# ChangeLog for dev-perl/Pod-LaTeX
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Pod-LaTeX/ChangeLog,v 1.3 2014/11/11 11:50:55 blueness Exp $

  11 Nov 2014; Anthony G. Basile <blueness@gentoo.org> Pod-LaTeX-0.610.0.ebuild:
  Keyword ~ppc ~ppc64 for bug #358465

  23 Oct 2014; Markus Meier <maekke@gentoo.org> Pod-LaTeX-0.610.0.ebuild:
  add ~arm, bug #358465

*Pod-LaTeX-0.610.0 (14 Oct 2014)

  14 Oct 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +Pod-LaTeX-0.610.0.ebuild, +metadata.xml:
  New package, dependency of dev-perl/Template-Plugin-Latex