@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Pod-LaTeX
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Pod-LaTeX/ChangeLog,v 1.3 2014/11/11 11:50:55 blueness Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Pod-LaTeX/ChangeLog,v 1.4 2015/01/31 14:02:57 zlogene Exp $
+
+  31 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> Pod-LaTeX-0.610.0.ebuild:
+  Add ~x86-fbsd keyword
 
   11 Nov 2014; Anthony G. Basile <blueness@gentoo.org> Pod-LaTeX-0.610.0.ebuild:
   Keyword ~ppc ~ppc64 for bug #358465
